result-positionFixed nav&searchBar, edit searchBar input, add tabs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <!--  -->
+    <!-- OwlCarousel 2 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <!--  -->
     <link rel="stylesheet" href="./CSS/aloha.all.min.css">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav class="navbar">
+    <nav class="navbar pt-xs pb-xs">
         <div class="container d-flex jc-space-between ai-center">
             <h1 class="logo">
                 <a href="" alt="ALOHA">ALOHA</a>
@@ -371,7 +371,7 @@
     <section class="index-sub bgc-secondary">
         <div class="container d-flex flex-d-col jc-center ai-center">
             <div class="d-flex flex-d-col">
-                <p class="fz-lg fw-bold mb-xs color-basic-b">Subscribe for Exclusive Offer</p>
+                <p class="fz-lg fw-bold font-primary mb-xs color-basic-b">Subscribe for Exclusive Offer</p>
                 <div class="d-flex jc-space-between">
                     <input type="text" name="" id="" placeholder="Your email address" class="input">
                     <input type="submit" value="subscribe" class="button btn-primary btn-b">
