--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <p class="card-tit fw-bold color-basic-b">Mr. Kawasaki Inn</p>
                             <div class="card-dec">
                                 <div class="d-flex ai-center mb-tiny">
-                                    <span class="color-basic-b mr-tiny">★★★★</span>
+                                    <span class="color-basic-b mr-tiny mr-4">★★★★</span>
                                     <span class="fz-xxs">4.0</span>
                                     <span class="fz-ets">・2k reviews</span>
                                 </div>
@@ -126,7 +126,7 @@
                             <p class="card-tit fw-bold color-basic-b">Weekly Paradise</p>
                             <div class="card-dec">
                                 <div class="d-flex ai-center mb-tiny">
-                                    <span class="color-basic-b mr-tiny">★★★★</span>
+                                    <span class="color-basic-b mr-tiny mr-4">★★★★</span>
                                     <span class="fz-xxs">4.0</span>
                                     <span class="fz-ets">・470 reviews</span>
                                 </div>
@@ -147,7 +147,7 @@
                             <p class="card-tit fw-bold color-basic-b">Beast Hotel</p>
                             <div class="card-dec">
                                 <div class="d-flex ai-center mb-tiny">
-                                    <span class="color-basic-b mr-tiny">★★★★</span>
+                                    <span class="color-basic-b mr-tiny mr-4">★★★★</span>
                                     <span class="fz-xxs">4.0</span>
                                     <span class="fz-ets">・283 reviews</span>
                                 </div>
@@ -168,7 +168,7 @@
                             <p class="card-tit fw-bold color-basic-b">Luxury jumeira</p>
                             <div class="card-dec">
                                 <div class="d-flex ai-center mb-tiny">
-                                    <span class="color-basic-b mr-tiny">★★★★★</span>
+                                    <span class="color-basic-b mr-tiny mr-4">★★★★★</span>
                                     <span class="fz-xxs">5.0</span>
                                     <span class="fz-ets">・5k reviews</span>
                                 </div>
@@ -189,7 +189,7 @@
                             <p class="card-tit fw-bold color-basic-b">Hotel Aqua</p>
                             <div class="card-dec">
                                 <div class="d-flex ai-center mb-tiny">
-                                    <span class="color-basic-b mr-tiny">★★★★★</span>
+                                    <span class="color-basic-b mr-tiny mr-4">★★★★★</span>
                                     <span class="fz-xxs">5.0</span>
                                     <span class="fz-ets">・2k reviews</span>
                                 </div>
@@ -406,24 +406,5 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-<script>
-
-    $(".lan-list").click(function(){
-        $(".drop-list").toggle();
-    })
-
-    $(document).ready(function(){
-        var owl = $('.owl-carousel');
-        $(".owl-carousel").owlCarousel({
-            loop: true,
-            items: 4,
-            margin: 30,
-            nav: false,
-            dots: false,
-        });
-        $('.choice-next').on('click',function(){
-            owl.trigger('next.owl.carousel');
-        })
-    });
-</script>
+<script src="./JS/all.js"></script>
 </html>
