Revert "try fixed img no display"
This reverts commit ad3149a993a052825bca2aea074139dc50e3b48d.

--- a/aloha-index.html
+++ b/aloha-index.html
@@ -104,7 +104,7 @@
                 <li class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/-cc-1.jpg" alt="Mr. Kawasaki Inn">
+                            <img src="./img/_cc_1.jpg" alt="Mr. Kawasaki Inn">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Mr. Kawasaki Inn</p>
@@ -124,7 +124,7 @@
                 <li class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/-cc-2.jpg" alt="Weekly Paradise">
+                            <img src="./img/_cc_2.jpg" alt="Weekly Paradise">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Weekly Paradise</p>
@@ -144,7 +144,7 @@
                 <li class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/-cc-3.jpg" alt="Beast Hotel">
+                            <img src="./img/_cc_3.jpg" alt="Beast Hotel">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Beast Hotel</p>
@@ -164,7 +164,7 @@
                 <li class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/-cc-4.jpg" alt="Luxury jumeira">
+                            <img src="./img/_cc_4.jpg" alt="Luxury jumeira">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Luxury jumeira</p>
@@ -184,7 +184,7 @@
                 <li class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/-cc-5.jpg" alt="Hotel Aqua">
+                            <img src="./img/_cc_5.jpg" alt="Hotel Aqua">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Hotel Aqua</p>
@@ -205,7 +205,7 @@
                 <li class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/-cc-6.jpg" alt="">
+                            <img src="./img/_cc_6.jpg" alt="">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Les Deux Alpes</p>
