--- a/aloha-index.html
+++ b/aloha-index.html
@@ -104,7 +104,7 @@
                 <li class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/_cc_1.jpg" alt="Mr. Kawasaki Inn">
+                            <img src="./img/cc-1.jpg" alt="Mr. Kawasaki Inn">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Mr. Kawasaki Inn</p>
@@ -124,7 +124,7 @@
                 <li class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/_cc_2.jpg" alt="Weekly Paradise">
+                            <img src="./img/cc_2.jpg" alt="Weekly Paradise">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Weekly Paradise</p>
@@ -144,7 +144,7 @@
                 <li class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/_cc_3.jpg" alt="Beast Hotel">
+                            <img src="./img/-cc_3.jpg" alt="Beast Hotel">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Beast Hotel</p>
