--- a/aloha-detail.html
+++ b/aloha-detail.html
@@ -79,20 +79,20 @@
                 <div class="row d-flex">
                     <div class="col-7 pr-tiny">
                         <div class="gallery gallery-lg">
-                            <img src="./img/_hr_1.jpg" alt="">
+                            <img src="./img/hr_1.jpg" alt="">
                         </div>
                     </div>
                     <div class="col p-0">
                         <div class="gallery gallery-m mb-tiny">
-                            <img src="./img/_hr_1_5.jpg" alt="">
+                            <img src="./img/hr_1_5.jpg" alt="">
                         </div>
                         <div class="d-flex  p-0">
                             <div class="gallery gallery-m mr-tiny">
-                                <img src="./img/_hr_1_2.jpg" alt="">
+                                <img src="./img/hr_1_2.jpg" alt="">
                             </div>
                             <div>
                                 <div class="gallery gallery-s mb-tiny">
-                                    <img src="./img/_hr_1_3.jpg" alt="">
+                                    <img src="./img/hr_1_3.jpg" alt="">
                                 </div>
                                 <div class="button btn-b btn-primary btn-bg-b ta-center">See All 10 Photos</div>
                             </div>
@@ -154,7 +154,7 @@
                     <div class="col-6">
                         <div class="type-list d-flex">
                             <div class="type-list-img">
-                                <img src="./img/_hr_3.jpg" alt="">
+                                <img src="./img/hr_3.jpg" alt="">
                             </div>
                             <div class="type-list-info">
                                 <div class="mb-1">
@@ -216,7 +216,7 @@
                     <div class="col-6">
                         <div class="type-list d-flex">
                             <div class="type-list-img">
-                                <img src="./img/_hr_6.jpg" alt="">
+                                <img src="./img/hr_6.jpg" alt="">
                             </div>
                             <div class="type-list-info">
                                 <div class="mb-1">
@@ -278,7 +278,7 @@
                     <div class="col-6">
                         <div class="type-list d-flex">
                             <div class="type-list-img">
-                                <img src="./img/_hr_8.jpg" alt="">
+                                <img src="./img/hr_8.jpg" alt="">
                             </div>
                             <div class="type-list-info">
                                 <div class="mb-1">
