--- a/aloha-index.html
+++ b/aloha-index.html
@@ -77,7 +77,7 @@
     </header>
 
     <!-- Top Choices -->
-    <section class=" mb-lg">
+    <section class="mb-lg">
         <div class="container d-flex flex-d-col choices">
             <h2 class="seb-tit mb-xs">Top Choices</h2>
             <ul class="d-flex mb-xs">
@@ -100,8 +100,8 @@
                     </div>
                 </li>
             </ul>
-            <ul class="owl-carousel choices-slider">
-                <li class="card choices-card">
+            <div class="owl-carousel choices-slider">
+                <div class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/cc_1.jpg" alt="Mr. Kawasaki Inn">
@@ -120,8 +120,8 @@
                             </div>
                         </div>
                     </a>
-                </li>
-                <li class="card choices-card">
+                </div>
+                <div class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/cc_2.jpg" alt="Weekly Paradise">
@@ -140,8 +140,8 @@
                             </div>
                         </div>
                     </a>
-                </li>
-                <li class="card choices-card">
+                </div>
+                <div class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/cc_3.jpg" alt="Beast Hotel">
@@ -160,8 +160,8 @@
                             </div>
                         </div>
                     </a>
-                </li>
-                <li class="card choices-card">
+                </div>
+                <div class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/cc_4.jpg" alt="Luxury jumeira">
@@ -180,8 +180,8 @@
                             </div>
                         </div>
                     </a>
-                </li>
-                <li class="card choices-card">
+                </div>
+                <div class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/cc_5.jpg" alt="Hotel Aqua">
@@ -201,8 +201,8 @@
                             </div>
                         </div>
                     </a>
-                </li>
-                <li class="card choices-card">
+                </div>
+                <div class="card choices-card">
                     <a href="./aloha-detail.html">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/cc_6.jpg" alt="">
@@ -222,8 +222,8 @@
                             </div>
                         </div>
                     </a>
-                </li>
-            </ul>
+                </div>
+            </div>
             <div class="choice-next d-flex jc-center ai-center">
                 <span class="material-icons">navigate_next</span>
             </div>
