--- a/aloha-detail.html
+++ b/aloha-detail.html
@@ -74,7 +74,7 @@
     </nav>
     <main class="result-main d-flex flex-d-col jc-center ai-center w-100p">
         <!-- gallery -->
-        <section class="pt-xs pb-xs">
+        <section class="result-gallery pt-xs pb-xs">
             <div class="container">
                 <div class="row d-flex">
                     <div class="col-7 pr-tiny">
@@ -101,8 +101,8 @@
                 </div>
             </div>
         </section>
-        <!-- ROOOOOOOOOOM -->
-        <section class="mb-lg">
+        <!-- ROOM -->
+        <section class="result-room mb-lg">
             <div class="container">
                 <div class="row">
                     <div class="col-7 pr-tiny">
@@ -120,7 +120,7 @@
             </div>
         </section>
         <!-- Select your room -->
-        <section class="mb-m w-100p">
+        <section class="result-sel-room mb-m w-100p">
             <div class="container">
                 <div class="row">
                     <h2 class="col-12 seb-tit mb-xs">Select Your Room</h2>
@@ -134,7 +134,7 @@
             </div>
         </section>
         <!-- room type -->
-        <section class="mb-lg">
+        <section class="result-room-type mb-lg">
             <div class="container">
                 <div class="row result-b-btm-sec pb-tiny">
                     <div class="col-6">
