--- a/aloha-index.html
+++ b/aloha-index.html
@@ -77,7 +77,7 @@
     </header>
 
     <!-- Top Choices -->
-    <section class="mb-lg">
+    <section class="index-top-cho mb-lg">
         <div class="container d-flex flex-d-col choices">
             <h2 class="seb-tit mb-xs">Top Choices</h2>
             <ul class="d-flex mb-xs">
@@ -231,7 +231,7 @@
     </section>
 
     <!-- Popular Destinations -->
-    <section class="mb-lg">
+    <section class="index-pop-des mb-lg">
         <div class="container">
             <h2 class="seb-tit mb-xs">Popular Destinations</h2>
             <ul class="row flex-wrap-w">
@@ -336,7 +336,7 @@
     </section>
 
     <!-- Get Inspiration -->
-    <section class="mb-lg">
+    <section class="index-get-ins mb-lg">
         <div class="container d-flex flex-d-col">
             <div class="d-flex jc-space-between">
                 <h2 class="seb-tit mb-xs">Get Inspiration</h2>
