index table rwd

--- a/aloha-index.html
+++ b/aloha-index.html
@@ -53,7 +53,7 @@
                 <span class="material-icons fz-lg">navigate_next</span>
             </div> -->
             <div class="d-flex bgc-secondary index-search-bar">
-                <ul class="d-flex">
+                <ul class="d-flex index-search-bar-list">
                     <li class="d-flex jc-center ai-center mr-1 bgc-basic-w">
                         <span class="material-icons color-basic-b pl-1 pr-1">location_on</span>
                         <input type="text" placeholder="Destination" class="input">
@@ -235,7 +235,7 @@
         <div class="container">
             <h2 class="seb-tit mb-xs">Popular Destinations</h2>
             <ul class="row flex-wrap-w">
-                <li class="card col-4 mb-xs pop-card">
+                <li class="card col-xl-4 col-md-6 mb-xs pop-card">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Osaka.jpg" alt="">
@@ -251,7 +251,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 mb-xs">
+                <li class="card col-xl-4 col-md-6 mb-xs pop-card">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Kyoto.jpg" alt="">
@@ -267,7 +267,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 mb-xs">
+                <li class="card col-xl-4 col-md-6 mb-xs pop-card">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Reykjavík.jpg" alt="">
@@ -283,7 +283,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4">
+                <li class="card col-xl-4 col-md-6 pop-card">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Paris.jpg" alt="">
@@ -299,7 +299,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4">
+                <li class="card col-xl-4 col-md-6 pop-card">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Roma.jpg" alt="">
@@ -315,7 +315,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4">
+                <li class="card col-xl-4 col-md-6 pop-card">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Vancouver.jpg" alt="">
@@ -343,7 +343,7 @@
                 <button class="button btn-secondary btn-s">SEE MORE</button>
             </div>
             <ul class="row jc-space-between flex-wrap-w">
-                <li class="card col-4">
+                <li class="card col-md-4">
                     <a href="">
                         <div class="card-img-wrap ins-img mb-xs">
                             <img src="./img/ins-Italy.jpg" alt="">
@@ -352,12 +352,11 @@
                             <p class="card-tit mb-tiny fz-sm fw-bold color-basic-b ins-tit">Italy Fifth Most Visited Country In The World</p>
                             <div class="card-dec ins-dec">
                                 <p>The rich history, traditions, culture and natural beauty of Italy – along with its incredible cuisine – have proved to be a magnet for visitors from across the globe.</p>
-                                <!-- <p>TWD 2,480</p> -->
                             </div>
                         </div>
                     </a>
                 </li>
-                <li class="card col-4">
+                <li class="card col-md-4">
                     <a href="">
                         <div class="card-img-wrap ins-img mb-xs">
                             <img src="./img/ins-Quebec.jpg" alt="">
@@ -371,7 +370,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4">
+                <li class="card col-md-4">
                     <a href="">
                         <div class="card-img-wrap ins-img mb-xs">
                             <img src="./img/ins-Qatar.jpg" alt="">
@@ -407,11 +406,11 @@
         <div class="container d-flex jc-space-between ai-center">
             <p>© 2020 ALOHA, Inc. All rights reserved</p>
             <ul class="d-flex">
-                <li class="mr-xs"><a href="">FAQs</a></li>
-                <li class="mr-xs"><a href="">Terms of use</a></li>
-                <li><a href="">Privacy policy</a></li>
+                <li class="mr-xs"><a href="#">FAQs</a></li>
+                <li class="mr-xs"><a href="#">Terms of use</a></li>
+                <li><a href="#">Privacy policy</a></li>
             </ul>
-            <ul class="d-flex">
+            <ul class="d-xl-flex d-md-none">
                 <li class="d-flex mr-xs">
                     <span class="material-icons mr-tiny">language</span>
                     <p>English</p>
@@ -439,6 +438,15 @@
             margin: 30,
             nav: false,
             dots: false,
+            responsiveClass: true,
+            responsive:{
+                1200:{
+                    items: 4,
+                },
+                768:{
+                    items: 3,
+                }
+            }
         });
         $('.choice-next').on('click',function(){
             owl.trigger('next.owl.carousel');
