--- a/aloha-index.html
+++ b/aloha-index.html
@@ -18,7 +18,7 @@
             <h1 class="logo">
                 <a href="./aloha-index.html" alt="ALOHA">ALOHA</a>
             </h1>
-            <ul class="d-flex ai-center">
+            <ul class="d-flex ai-center nav-list">
                 <li>
                     <div class="lan-list d-flex ai-center mr-m">
                         <span class="material-icons">language</span>
@@ -410,7 +410,7 @@
                 <li class="mr-xs"><a href="#">Terms of use</a></li>
                 <li><a href="#">Privacy policy</a></li>
             </ul>
-            <ul class="d-xl-flex d-md-none">
+            <ul class="d-xl-flex footer-select-list">
                 <li class="d-flex mr-xs">
                     <span class="material-icons mr-tiny">language</span>
                     <p>English</p>
@@ -445,6 +445,12 @@
                 },
                 768:{
                     items: 3,
+                },
+                578:{
+                    items: 3,
+                },
+                360:{
+                    items: 2,
                 }
             }
         });
